--- a/home/css/cta.css
+++ b/home/css/cta.css
@@ -36,3 +36,23 @@
     cursor: pointer;
     align-self: flex-end;
 }
+/* tablet */
+@media screen and (min-width:768px) and (max-width:991.98px){
+    .cta{
+        margin-top: 80px;
+    }
+    .cta-inner{
+        padding: 40px 32px;
+        gap: 80px;
+    }
+    .cta-title{
+        font-size: 40px;
+    }
+    .cta-desc{
+        font-size: 16px;
+    }
+    .cta-btn{
+        padding: 14px 22px;
+        font-size: 16px;
+    }
+}
