--- a/home/css/common.css
+++ b/home/css/common.css
@@ -13,6 +13,9 @@ body{
       font-family: "Roboto Flex", sans-serif;
       background-color: #0f0f0f;
 }
+h4,a{
+  font-family: "Roboto Mono", monospace;
+}
 .container{
     margin: 0 50px;
 }
@@ -27,6 +30,7 @@ position: relative;
 top:3px;
 }
 .text-side-btn{
+  font-family: "Roboto Mono", monospace;
     font-weight: 400;
     font-size: 18px;
     line-height: 150%;
@@ -94,6 +98,7 @@ gap:10px;
     color:#CE7D63;
 }
 .marquee__item{
+  font-family: "Roboto Mono", monospace;
     font-weight: 400;
     font-size: 20px;
     line-height: 150%;
@@ -111,76 +116,28 @@ gap:10px;
 .marquee:hover .marquee__track {
   animation-play-state: paused;
 }
-/* tablet */
-@media screen and (min-width:768px) and (max-width:991.98px){
-    .container{
-        margin: 0 40px;
-    }
-    .section-header{
-        padding: 40px;
-    }
 
-    .section-header--between{
-        padding: 40px;
-    }
-
-    .section-title{
-        font-size: 38px;
-    }
-
-    .marquee {
-        margin-left: -40px;
-        margin-right: -40px;
-        margin-top: 32px;
-    }
-
-    .marquee__content {
-        padding: 14px 0;
-    }
-
-    .marquee__item {
-        font-size: 18px;
-    }
+.hide-on-pc-and-tablet{
+  display: none;
 }
-
-/* mobile */
+@media screen and (min-width:768px) and (max-width:991.98px){
+.container{
+    margin: 0 30px;
+}
+}
 @media screen and (max-width:767.98px){
-    .container{
-        margin: 0 16px;
-    }
-
-    .section-header{
-        padding: 24px 20px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 12px;
-    }
-
-    .section-header--between{
-        padding: 24px 20px;
-    }
-
-    .section-title{
-        font-size: 32px;
-    }
-
-    .marquee {
-        margin-left: -16px;
-        margin-right: -16px;
-        margin-top: 24px;
-    }
-
-    .marquee__track{
-        width: max-content;
-        min-width: 100%;
-    }
-
-    .marquee__content{
-        padding: 12px 0;
-    }
-
-    .marquee__item{
-        font-size: 16px;
-        margin: 0 12px;
-    }
+.container{
+    margin: 0 20px;
+}
+.hide-on-mobile{
+  display: none !important;
+}
+.hide-on-pc-and-tablet{
+  display: block;
+}
+.wrap-section-mobile{
+  padding-top: 20px;
+  border: 2px solid #1f1f1f;
+  border-radius: 24px;
+}
 }
