--- a/home/css/cta.css
+++ b/home/css/cta.css
@@ -36,23 +36,66 @@
     cursor: pointer;
     align-self: flex-end;
 }
-/* tablet */
 @media screen and (min-width:768px) and (max-width:991.98px){
     .cta{
-        margin-top: 80px;
+        margin-top: 60px;
     }
-    .cta-inner{
-        padding: 40px 32px;
-        gap: 80px;
+.cta-inner{
+    padding: 40px;
+    border-radius: 8px;
+    gap: 60px;
+}
+.cta-title{
+    font-size: 21px;
+}
+.cta-btn{
+    border-radius: 7px;
+    padding: 8px 9px;
+    gap: 2px;
+}
+.cta-btn span{
+    font-size: 6px;
+    display: inline-block;
+    width: 65px;
+}
+.cta-desc{
+    font-size: 7px;
+}
+.cta-btn img{
+    width: 7px;
+}
+.marquee-cta{
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-top: 10px;
+    border-radius: 7px;
+}
+
+}
+@media screen and (max-width:767.98px){
+    .cta{
+        margin-top: 50px;
     }
-    .cta-title{
-        font-size: 40px;
-    }
-    .cta-desc{
-        font-size: 16px;
-    }
-    .cta-btn{
-        padding: 14px 22px;
-        font-size: 16px;
-    }
+.cta-inner{
+    border-radius: 14px;
+    padding: 30px;
+    flex-direction: column;
+    gap: 30px;
+}
+.cta-title{
+    font-size: 48px;
+    line-height: 1.5;
+}
+.cta-desc{
+    font-size: 19px;
+}
+.cta-btn{
+    width: 100%;
+    justify-content: center;
+}
+.marquee-cta{
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
 }
