--- a/home/css/header.css
+++ b/home/css/header.css
@@ -3,12 +3,20 @@
     background-color:var(--background-color);
         border-radius: 16px;
     border:1px solid #1C1C21;
+        position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
 }
 .header-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 24px 24px 24px 50px;
+    width: 100%;
+
+
 }
 .menu{
     display: flex;
@@ -38,31 +46,117 @@
 }
 /* tablet */
 @media screen and (min-width:768px) and (max-width:991.98px){
-
-
-.header{
- margin-top: 30px;}
-    
-
+    .header{
+        border-radius: 10px;
+    }
     .header-container{
-    padding: 20px 20px 20px 40px;
+        padding: 20px 20px 20px 40px;
+    }
+    .logo img{
+        width: 80px;
+    }
+    .menu-item{
+        display: flex;
+        align-items: center;
+    border-radius: 4px;
+    padding: 6px 10px;
+    background-color: #0F0F0F;
+
+    }
+    .menu-item a{
+        font-size: 5px;
+    }
 }
-.logo img{
-    width: 97px;
-    height: 18px;
+/* mobile */
+@media screen and (max-width:767.98px){
+    .header{
+        max-width:calc(100vw - 20px * 2);
+        border-radius: 10px;
+    }
+    .header-icon{
+        background-color: #0F0F0F;
+        padding:10px;
+        border-radius: 10px;
+    }
+    .header-container{
+        padding: 24px;
+    }
+    .logo img{
+        width: 100px;
+    }
+    .header-icon-menubar{
+        width: 25px;
+    }
+    .menu-overlay{
+    position: fixed;
+    inset: 0;
+    z-index: 9;
+    background-color: rgba(0,0,0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
 }
-.menu{
-gap:14px;
+.menu-drawer{
+    position: fixed;
+    height: 100%;
+    top: 0;
+    right: 0;
+    width: 320px;
+    background-color: var(--background-color);
+    z-index: 10;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    transform: translateX(100%);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
 }
-.menu-item{
+#menu-checkbox:checked ~ .menu-overlay{
+    opacity: 1;
+    visibility: visible;
+}
+#menu-checkbox:checked ~ .menu-drawer{
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+}
+.menu-drawer-header{
     display: flex;
-    justify-content: center;
     align-items: center;
-    border-radius: 10px;
-    padding: 12px 10px;
-    background-color:#0F0F0F;
+    justify-content: space-between;
+    margin: 30px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #f1f1f3;
 }
-.menu-item a{
-font-size: 14px;
+.menu-drawer-header label img{
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+}.menu-drawer-content{
+    margin-top: 25px;
 }
+.menu-drawer-content ul {
+    list-style: none;
+}
+.menu-drawer-content ul li{
+padding: 14px 0;
+display: block;
+line-height: 150%;
+text-align: center;
+margin-bottom: 23px;
+
+}.menu-drawer-content ul li:first-child{
+background-color: var(--secondary-color);
+}
+.menu-drawer-content ul li:first-child a{
+color: var(--primary-color);
+}
+.menu-drawer-content ul li a{
+    text-decoration: none;
+font-size: 16px;
+color: #CE7D63;
+
+
+    }
+
 }
