--- a/home/css/works.css
+++ b/home/css/works.css
@@ -15,6 +15,11 @@
     gap:20px;
     flex-wrap: wrap;
 }
+.work-preview img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .work-info{
     background-color: var(--background-color);
     padding: 60px 40px;
@@ -91,6 +96,9 @@
 
 }
 .work-preview img{
+    border-radius: 7px;
+}
+.work-preview img{
     width: 100%;
     height: 100%;
 }
@@ -118,7 +126,7 @@ background-color: var(--background-color);
     display: flex;
     gap:10px;
     flex-wrap: wrap;
-    width: 500px;
+    width: 469px;
 
 }
 .tag-list .tag{
@@ -159,4 +167,161 @@ background-color: var(--background-color);
     text-align: center;
     outline: none;
     border: none;
+}
+@media screen and (min-width:768px) and (max-width:991.98px){
+.text-side-btn-works{
+    font-size: 10px;
+}
+.works{
+    padding: 5px;
+    gap: 5px;
+    border-radius: 10px;
+}
+.work-list{
+    gap:5px;
+}
+.work-info{
+padding: 20px 10px;
+width: calc((100% - 5px * 2) / 3);
+gap: 20px;
+height: fit-content;
+border-radius: 7px;
+}
+.work-title-wrap-icon{
+    border-radius: 5px;
+    padding: 2px;
+}
+.work-title-wrap-icon img{
+    width: 24px;
+}
+.work-title{
+    font-size: 8px;
+}
+.btn-arrow-top-right--works{
+    padding: 2px 6px;
+}
+.tag .dot{
+    font-size: 9px;
+    position: relative;
+    top:-2px;
+}
+.tag span:first-child {
+font-size: 6px;
+}
+.tag span:last-child{
+    font-size: 6px;
+}
+.work-desc{
+    font-size: 7px;
+}
+.work-preview {
+    width: calc((100% - 5px * 2) / 3);
+
+}
+.work-tech {
+padding: 10px;
+gap:5px;
+border-radius: 7px;
+}
+.work-subtitle{
+font-size: 7px;
+}
+.tag-list{
+    width: 215px;
+}
+.tag-list .tag {
+    border-radius: 17px;
+    background-color: #1F1F1F;
+    padding: 5px 5px;
+    color: #E6E6E6;
+    font-size: 7px;
+    font-weight: 400;
+    line-height: 150%;
+}
+.work-extra{
+    gap: 5px;
+    width: calc((100% - 5px * 2) / 3);
+
+}
+.work-team{
+    padding: 10px;
+    gap: 15px;
+    border-radius: 7px;
+}
+.avatar-list{
+    gap:5px;
+}
+.avatar-list img{
+    width: 20px;
+}
+.btn-works {
+    border-radius: 5px;
+    padding: 14px 7px;
+    font-size: 9px;
+
+}
+}
+@media screen and (max-width:767.98px){
+.work-preview{
+    width: 100%;
+}
+.work-preview img{
+    border-radius: 14px;
+    object-fit: cover;
+    height: 190px;
+
+}
+.works{
+    padding: 20px;
+}
+.work-list{
+    gap: 10px;
+}
+.work-info{
+    width: 100%;
+    padding: 40px 30px;
+    gap: 25px;
+}
+.work-title-wrap-icon{
+    padding: 12px;
+}
+.work-title{
+    font-size: 18px;
+}.tag .dot{
+    font-size: 7px;
+}
+.tag span:first-child{
+    font-size: 8px;
+}
+.tag span:last-child{
+    font-size: 8px;
+}
+.work-desc{
+    font-size: 12px;
+}
+.btn-arrow-top-right img{
+    width: 14px;
+    top: 2px;
+}
+.btn-arrow-top-right--works{
+    padding: 10px 12px;
+}
+.wrap-btn{
+    justify-content: flex-start;
+}
+.text-side-btn-works{
+    font-size: 16px;
+}
+.btn-show-more{
+    background-color: #1A1A1A;
+    border-radius: 12px;
+    border:none;
+    outline:none;
+    padding: 20px 16px;
+    width: calc(100% - 40px);
+    margin: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 }
