--- a/home/css/cta.css
+++ b/home/css/cta.css
@@ -99,3 +99,45 @@
     margin-top: 20px;
 }
 }
+@media screen and (min-width:992px) and (max-width:1199.98px) {
+.cta-inner{
+    padding: 60px;
+    gap: 100px;
+}
+.cta-btn{
+    border-radius: 8px;
+    padding: 10px 22px;
+    font-size: 14px;
+}
+.cta-title{
+    font-size: 42px;
+}
+.cta-desc{
+    font-size: 16px;
+}
+.marquee-media{
+    margin-right: 50px;
+    margin-left: 50px;
+}
+}
+@media screen and (min-width:1200px) and (max-width:1399.98px) {
+.cta-inner{
+    padding: 60px;
+    gap: 100px;
+}
+.cta-btn{
+    border-radius: 8px;
+    padding: 10px 22px;
+    font-size: 14px;
+}
+.cta-title{
+    font-size: 42px;
+}
+.cta-desc{
+    font-size: 16px;
+}
+.marquee-media{
+    margin-right: 50px;
+    margin-left: 50px;
+}
+}
