--- a/home/css/footer.css
+++ b/home/css/footer.css
@@ -20,7 +20,6 @@
     padding: 40px;
     background-color: #1A1A1A;
     width: calc((100% - 20px) / 2);
-    height: fit-content;
 }
 .footer-social__item{
     display: flex;
@@ -389,5 +388,169 @@ width: 40px;
     text-align: center;
     padding-bottom: 20px;
     border-bottom: 1px solid #232329;
+}
+}
+@media screen and (min-width:992px) and (max-width:1199.98px) {
+.footer-left{
+flex: 0 0 42%;
+}
+.footer-social{
+    height: auto;
+    padding: 20px;
+}
+.footer-social__icon{
+    border-radius: 8px;
+    padding: 8px;
+}
+.footer-social__arrow{
+    padding: 14px 16px;
+}
+.footer-social__arrow img{
+    position: relative;
+    top:2px;
+}
+.footer-social__item{
+    gap: 40px;
+}
+.footer-social__title{
+    font-size: 24px;
+}
+.footer-social__desc{
+    font-size: 16px;
+}
+
+.footer-right{
+    flex: 0 0 58%;
+    min-width: 0;
+}
+.footer-links{
+    padding: 60px;
+    gap: 40px;
+}
+.footer-links__col{
+    width:calc((100% - 40px * 3) / 4)
+}
+.footer-links__title{
+    font-size: 19px;
+}
+.footer-links__list li a{
+    font-size: 12px;
+}
+.footer-links__list li{
+    display: flex;
+    align-items: center;
+}
+.badge {
+    border-radius: 4px;
+    
+    padding: 4px 8px;
+    font-size: 9px;
+}
+.footer-newsletter__form input{
+    padding: 12px 15px;
+    font-size: 12px;
+}
+.footer-newsletter__title{
+    font-size: 16px;
+}
+.btn-newsletter{
+    align-self: flex-end;
+    height: 40px;
+    width: 40px;
+    padding: 0;
+}
+.btn-newsletter img{
+    width: 15px;
+}
+.footer-bottom{
+    gap: 80px;
+}
+.footer-bottom span{
+    font-size: 10px;
+}
+.footer-bottom__links a{
+    font-size: 9px;
+}
+}
+@media screen and (min-width:1200px) and (max-width:1399.98px) {
+.footer-left{
+flex: 0 0 42%;
+}
+.footer-social{
+    height: auto;
+    padding: 20px;
+}
+.footer-social__icon{
+    border-radius: 8px;
+    padding: 8px;
+}
+.footer-social__arrow{
+    padding: 14px 16px;
+}
+.footer-social__arrow img{
+    position: relative;
+    top:2px;
+}
+.footer-social__item{
+    gap: 40px;
+}
+.footer-social__title{
+    font-size: 24px;
+}
+.footer-social__desc{
+    font-size: 16px;
+}
+
+.footer-right{
+    flex: 0 0 58%;
+    min-width: 0;
+}
+.footer-links{
+    padding: 60px;
+    gap: 40px;
+}
+.footer-links__col{
+    width:calc((100% - 40px * 3) / 4)
+}
+.footer-links__title{
+    font-size: 20px;
+}
+.footer-links__list li a{
+    font-size: 15px;
+}
+.footer-links__list li{
+    display: flex;
+    align-items: center;
+}
+.badge {
+    border-radius: 4px;
+    
+    padding: 4px 8px;
+    font-size: 9px;
+}
+.footer-newsletter__form input{
+    padding: 12px 15px;
+    font-size: 12px;
+}
+.footer-newsletter__title{
+    font-size: 16px;
+}
+.btn-newsletter{
+    align-self: flex-end;
+    height: 40px;
+    width: 40px;
+    padding: 0;
+}
+.btn-newsletter img{
+    width: 15px;
+}
+.footer-bottom{
+    gap: 80px;
+}
+.footer-bottom span{
+    font-size: 12px;
+}
+.footer-bottom__links a{
+    font-size: 12px;
 }
 }
