--- a/home/css/header.css
+++ b/home/css/header.css
@@ -3,7 +3,7 @@
     background-color:var(--background-color);
         border-radius: 16px;
     border:1px solid #1C1C21;
-        position: fixed;
+        position: sticky;
     top: 0;
     left: 0;
     right: 0;
@@ -159,4 +159,26 @@ color: #CE7D63;
 
     }
 
+}
+@media screen and (min-width:992px) and (max-width:1199.98px) {
+    .header-container{
+        padding: 24px 24px 24px 40px;
+    }
+    .menu-item{
+        padding: 12px;
+    }
+    .menu-item a{
+        font-size: 12px;
+    }
+}
+@media screen and (min-width:1200px) and (max-width:1399.98px) {
+    .header-container{
+        padding: 24px 24px 24px 40px;
+    }
+    .menu-item{
+        padding: 16px;
+    }
+    .menu-item a{
+        font-size: 16px;
+    }
 }
