--- a/home/css/hero.css
+++ b/home/css/hero.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     gap: 20px;
     background-color: #0F0F0F;
-    margin-top: 162px;
+    margin-top: 20px;
     
 }
 .hero-container{
@@ -15,7 +15,12 @@
     border-radius: 20px;
     background-color: var(--background-color);
     padding: 100px 80px 20px 80px;
-    flex: 1;
+    width: 66%;
+}
+.hero-left-header{
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
 .hero-title{
     color: #F9EFEC;
@@ -24,17 +29,16 @@
     font-size: 78px;
     display: flex;
     align-items: center;
-    gap:20px
+    gap:20px;
 }
-.hero-cta{
+.hero-cta {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap:10px;
+    gap: 10px;
 }
 .cta-bounder{
     position: relative;
-    top:10px;
 }
 .cta-icon{
     border-radius: 100px;
@@ -43,13 +47,13 @@
     width: 52px;
     height: 52px;
     position: absolute;
-    top:18%;
+    top:16%;
     left: 19%;
 }
 .cta-icon img{
 position: absolute;
-top:14px;
-left: 14px;
+top:24%;
+left: 28%;
 width: 24px;
 height: 24px;
 margin: auto;
@@ -73,17 +77,28 @@ margin: auto;
 
 .hero-right{
     border-radius: 14px;
+    flex: 1;
+    display: flex;
+  flex-direction: column;
+}
+.project-image {
+    flex: 1;
+  position: relative;         
+  overflow: hidden;    
 }
 .project-action{
     position: absolute;
-    top:16px;
+    top:4%;
 right: 4%;
 
 }
 .project-image > img{
     width: 100%;
-    height: 100%;
+    height: auto;
+    object-fit: contain; 
+    display: block;
 }
+
 .project-action__icon{
     border-radius: 100px;
     background-color: #CE7D63;
@@ -91,26 +106,27 @@ right: 4%;
     height: 88px;
     display: inline-block;
     position: absolute;
-    top:17px;
-    left: 25px;
+    top:14%;
+    left: 22%;
 }
 .project-action__icon img{
     position: absolute;
-    top:24px;
-    left: 23px;
+    top:26%;
+    left: 25%;
 }
 .project-image{
     position: relative;
     border-top-left-radius: 14px;
     border-top-right-radius: 14px;
-    overflow: auto;
+    overflow: hidden;
 }
 .project-info{
     background-color: #1f1f1f;
     padding: 30px;
     border-bottom-left-radius: 14px;
     border-bottom-right-radius: 14px;
-    margin-top: -4px;
+    margin-top: 0;      
+  flex-shrink: 0;
 }
 .project-info h3{
     font-size: 24px;
@@ -175,7 +191,7 @@ right: 4%;
 @media screen and (min-width:768px) and (max-width:991.98px) {
 .hero{
     gap: 10px;
-    margin-top: 122px;
+    margin-top: 22px;
 }
     .hero-left{
         padding: 20px;
@@ -253,7 +269,7 @@ border-radius: 7px;
     font-size: 12px;
 }
 .stat-label{
-font-size: 10px;
+font-size: 8px;
 }
 .stat-number {
 font-size: 25px;
@@ -321,8 +337,8 @@ top: 14%;
 }
 .hero-stats{
     flex-wrap: wrap;
-    gap: 20px;
-    padding: 19px;
+    gap: 15px;
+    padding: 10px;
 }
 
 .stat-item{
@@ -341,5 +357,285 @@ top: 14%;
     display: flex;
         align-items: center;
         justify-content: center;
+}
+}
+@media screen and (min-width:992px) and (max-width:1199.98px) {
+    .hero-left{
+        padding: 60px 60px 20px 60px;
+    }
+    .cta-icon{
+        width: 32px;
+        height: 32px;
+        top:17%;
+    }
+    .cta-bounder img{
+        width: 46px;
+    }
+    .cta-icon img {
+    position: absolute;
+    top: 13%;
+    left: 12%;
+    width: 24px;
+    height: 24px;
+    margin: auto;
+}
+.cta-text{
+    font-size: 14px;
+}
+.hero-title{
+    font-size: 34px;
+}
+.hero-desc{
+    width: auto;
+    font-size: 16px;
+}
+.marquee{
+    margin-top: 50px;
+    margin-left: -30px;
+    margin-right: -30px;
+}
+.marquee__item{
+font-size: 14px;
+}
+.project-action img{
+    width: 55px;
+}
+.project-action__icon{
+    width: 44px;
+    height: 44px;
+}
+.project-action__icon img{
+    width: 21px;
+}
+.hero-stats .stat-item:last-child{
+    padding: 45px 3px;
+    height: auto;
+}
+.stat-label{
+    font-size: 7px;
+}
+.stat-number{
+    font-size: 40px;
+}
+.btn-arrow-top-right{
+    padding: 11px 12px;
+}
+.btn-arrow-top-right img{
+    width: 16px;
+}
+.hero-stats .stat-item:last-child .stat-label{
+    font-size: 12px;
+}
+}
+@media screen and (min-width:1200px) and (max-width:1399.98px) {
+    .hero-left{
+        padding: 60px 60px 20px 60px;
+    }
+    .cta-icon{
+        width: 38px;
+        height: 38px;
+        top:15%;
+    }
+    .cta-bounder img{
+        width: 50px;
+    }
+    .cta-icon img {
+    position: absolute;
+    top: 17%;
+    left: 18%;
+    width: 24px;
+    height: 24px;
+    margin: auto;
+}
+.cta-text{
+    font-size: 16px;
+}
+.hero-title{
+    font-size: 42px;
+}
+.hero-desc{
+    width: auto;
+    font-size: 16px;
+}
+.marquee{
+    margin-top: 50px;
+    margin-left: -30px;
+    margin-right: -30px;
+}
+.marquee__item{
+font-size: 15px;
+}
+.project-action img{
+    width: 55px;
+}
+.project-action__icon{
+    width: 44px;
+    height: 44px;
+}
+.project-action__icon img{
+    width: 21px;
+}
+.hero-stats .stat-item:last-child{
+    padding: 55px 3px;
+    height: auto;
+}
+.stat-label{
+    font-size: 10px;
+}
+.stat-number{
+    font-size: 50px;
+}
+.btn-arrow-top-right{
+    padding: 11px 12px;
+}
+.btn-arrow-top-right img{
+    width: 16px;
+}
+.hero-stats .stat-item:last-child .stat-label{
+    font-size: 12px;
+}
+}
+@media screen and (min-width:1400px) and (max-width:1599.98px) {
+    .hero-left{
+        padding: 60px 60px 20px 60px;
+    }
+    .cta-icon{
+        width: 38px;
+        height: 38px;
+        top:15%;
+    }
+    .cta-bounder img{
+        width: 50px;
+    }
+    .cta-icon img {
+    position: absolute;
+    top: 17%;
+    left: 18%;
+    width: 24px;
+    height: 24px;
+    margin: auto;
+}
+.cta-text{
+    font-size: 20px;
+}
+.hero-title{
+    font-size: 60px;
+}
+.hero-desc{
+    width: auto;
+    font-size: 16px;
+}
+.marquee{
+    margin-top: 50px;
+    margin-left: -30px;
+    margin-right: -30px;
+}
+.marquee__item{
+font-size: 15px;
+}
+.project-action img{
+    width: 86px;
+}
+.project-action__icon{
+    width: 76px;
+    height: 76px;
+    top:10%;
+}
+.project-action__icon img{
+    width: 30px;
+    position: relative;
+    top: 22px;
+    left: 22px;
+}
+.hero-stats .stat-item:last-child{
+    padding: 55px 3px;
+    height: auto;
+}
+.stat-label{
+    font-size: 14px;
+}
+.stat-number{
+    font-size: 50px;
+}
+.btn-arrow-top-right{
+    padding: 11px 12px;
+}
+.btn-arrow-top-right img{
+    width: 16px;
+}
+.hero-stats .stat-item:last-child .stat-label{
+    font-size: 12px;
+}
+}
+@media screen and (min-width:1600px) and (max-width:1865.98px) {
+    .hero-left{
+        padding: 60px 60px 20px 60px;
+    }
+    .cta-icon{
+        width: 48px;
+        height: 48px;
+        top:14%;
+    }
+    .cta-bounder img{
+        width: 60px;
+    }
+    .cta-icon img {
+    position: absolute;
+    top: 23%;
+    left: 27%;
+    width: 24px;
+    height: 24px;
+    margin: auto;
+}
+.cta-text{
+    font-size: 22px;
+}
+.hero-title{
+    font-size: 70px;
+}
+.hero-desc{
+    width: auto;
+    font-size: 20px;
+}
+.marquee{
+    margin-top: 50px;
+    margin-left: -30px;
+    margin-right: -30px;
+}
+.marquee__item{
+font-size: 18px;
+}
+.project-action img{
+    width: 86px;
+}
+.project-action__icon{
+    width: 76px;
+    height: 76px;
+    top:10%;
+}
+.project-action__icon img{
+    width: 30px;
+    position: relative;
+    top: 22px;
+    left: 22px;
+}
+.hero-stats .stat-item:last-child{
+    padding: 55px 3px;
+    height: auto;
+}
+.stat-label{
+    font-size: 14px;
+}
+.stat-number{
+    font-size: 50px;
+}
+.btn-arrow-top-right{
+    padding: 11px 12px;
+}
+.btn-arrow-top-right img{
+    width: 16px;
+}
+.hero-stats .stat-item:last-child .stat-label{
+    font-size: 12px;
 }
 }
