--- a/home/css/reason.css
+++ b/home/css/reason.css
@@ -92,6 +92,8 @@ font-size: 7px;
 @media screen and (max-width:767.98px){
     .reason{
         margin-top: 50px;
+        padding: 10px;
+        gap: 15px;
     }
 .section-header{
 padding: 30px;
@@ -128,4 +130,53 @@ padding: 17px 19px;
     font-size: 15px;
 }
 
+}
+@media screen and (min-width:992px) and (max-width:1199.98px) {
+.section-header{
+    padding: 50px 150px 50px 50px;
+}
+.section-title{
+    line-height: 1.3;
+}
+.card{
+    padding: 30px;
+}
+.card-title{
+    font-size: 13px;
+    height: auto;
+}
+.card-desc{
+    font-size: 8px;
+}
+.text-side-btn{
+    font-size: 13px;
+}
+
+}
+@media screen and (min-width:1200px) and (max-width:1399.98px) {
+.section-header{
+    padding: 50px 150px 50px 50px;
+}
+.section-title{
+    line-height: 1.3;
+}
+.card{
+    padding: 30px;
+}
+.card-title{
+    font-size: 17px;
+    height: auto;
+}
+.card-desc{
+    font-size: 12px;
+}
+.text-side-btn{
+    font-size: 15px;
+}
+
+}
+@media screen and (min-width:1400px) and (max-width:1599.98px) {
+.card-title{
+    font-size: 22px;
+}
 }
