--- a/home/css/works.css
+++ b/home/css/works.css
@@ -262,6 +262,9 @@ font-size: 7px;
 }
 }
 @media screen and (max-width:767.98px){
+    .container-works{
+        margin: 0 10px;
+    }
 .work-preview{
     width: 100%;
 }
@@ -272,7 +275,7 @@ font-size: 7px;
 
 }
 .works{
-    padding: 20px;
+    padding: 10px;
 }
 .work-list{
     gap: 10px;
@@ -318,10 +321,172 @@ font-size: 7px;
     border:none;
     outline:none;
     padding: 20px 16px;
-    width: calc(100% - 40px);
-    margin: 20px;
+    width: calc(100% - 20px);
+    margin: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+}
+@media screen and (min-width:992px) and (max-width:1199.98px) {
+.section-header{
+    padding: 50px 75px 50px 50px;
+}
+.work-info{
+    padding: 30px 20px;
+    gap: 40px;
+    height: fit-content;
+}
+.work-title-wrap-icon{
+    padding: 6px;
+    border-radius: 6px;
+}
+.work-title-wrap-icon img{
+width: 18px;
+}
+.work-title{
+    font-size: 10px;
+}
+.btn-arrow-top-right--works{
+    padding: 5px 8px;
+}
+.btn-arrow-top-right--works img{
+    width: 12px;
+    position: relative;
+    top: 1px;
+}
+.text-side-btn-works--details{
+    font-size: 10px;
+}
+.tag .dot{
+    font-size: 9px;
+}
+.tag span:first-child{
+    font-size: 11px;
+}
+.tag span:last-child{
+    font-size: 10px;
+}
+.work-desc{
+    font-size: 14px;
+}
+.work-tech{
+    padding: 30px;
+}
+.work-subtitle{
+    font-size: 14px;
+}
+.tag-list{
+    width: auto;
+}
+.tag-list .tag{
+    font-size: 8px;
+}
+.work-team{
+    padding: 20px;
+    gap: 20px;
+}
+.work-meta .tag{
+    padding: 16px;
+}
+.avatar-list img{
+    width: 25px;
+}
+.work-extra{
+    gap:10px
+}
+.btn-works{
+    font-size: 14px;
+}
+}
+@media screen and (min-width:1200px) and (max-width:1399.98px) {
+.section-header{
+    padding: 50px 75px 50px 50px;
+}
+.work-info{
+    padding: 30px 20px;
+    gap: 40px;
+    height: fit-content;
+}
+.work-title-wrap-icon{
+    padding: 8px;
+    border-radius: 8px;
+}
+.work-title-wrap-icon img{
+width: 30px;
+}
+.work-title{
+    font-size: 13px;
+}
+.btn-arrow-top-right--works{
+    padding: 5px 8px;
+}
+.btn-arrow-top-right--works img{
+    width: 12px;
+    position: relative;
+    top: 1px;
+}
+.text-side-btn-works--details{
+    font-size: 13px;
+}
+.tag .dot{
+    font-size: 14px;
+}
+.tag span:first-child{
+    font-size: 15px;
+}
+.tag span:last-child{
+    font-size: 14px;
+}
+.work-desc{
+    font-size: 16px;
+}
+.work-tech{
+    padding: 30px;
+}
+.work-subtitle{
+    font-size: 15px;
+}
+.tag-list{
+    width: auto;
+}
+.tag-list .tag{
+    font-size: 12px;
+}
+.work-team{
+    padding: 20px;
+    gap: 20px;
+}
+.work-meta .tag{
+    padding: 16px;
+}
+.avatar-list img{
+    width: 26px;
+}
+.work-extra{
+    gap:10px
+}
+.btn-works{
+    font-size: 16px;
+}
+}
+@media screen and (min-width:1400px) and (max-width:1599.98px) {
+.work-title{
+    font-size: 15px;
+}
+.work-title-wrap-icon{
+    padding: 10px;
+}
+.text-side-btn-works{
+    font-size: 16px;
+}
+.work-subtitle{
+    font-size: 15px;
+}
+.tag-list{
+    width: 430px;
+}
+.tag-list .tag{
+    padding: 10px 13px;
 }
 }
