--- a/Service/css/banner.css
+++ b/Service/css/banner.css
@@ -17,6 +17,26 @@
     font-weight: 600;
     line-height: 150%;
 }
+.banner-image {
+    width: 593px;
+    height: 592px;
+    border-radius: 20px;
+
+    background-image: url('../image/Banner.png');
+    background-size: cover;
+    background-position: center;
+
+    background-color: rgba(206, 125, 99, 0.8);
+
+    background-blend-mode: multiply;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 30px;
+    position: relative;
+    overflow: hidden;
+}
 .CTA-button-2 {
     border-radius: 50%;
     background-color: #b81919;
