--- a/assets/css/awards.css
+++ b/assets/css/awards.css
@@ -1,7 +1,7 @@
 .awards-section {
-  max-width: 1400px;
+    max-width: 1500px;
   margin: 40px auto;
-  padding: 20px;
+  padding: 60px 40px;
 }
 
 .title {
