--- a/home/css/hero.css
+++ b/home/css/hero.css
@@ -409,10 +409,14 @@ font-size: 14px;
 }
 .hero-stats .stat-item:last-child{
     padding: 45px 3px;
-    height: auto;
+    height: 142px;
 }
 .stat-label{
-    font-size: 7px;
+font-size: 11px;
+        text-align: center;
+}
+.stat-item{
+    height: 142px;
 }
 .stat-number{
     font-size: 40px;
