--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -19,10 +19,13 @@ body {
 
 /* HEADER */
 .header {
+
   background: #1a1a1a;
   padding: 20px 0;
   position: sticky;
   top: 0;
+  z-index: 1;
+  width: 100%;
 }
 
 .header-inner {
@@ -53,3 +56,72 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
+
+#menu-toggle {
+  display: none;
+}
+@media (max-width: 768px) {
+
+  .header {
+    padding: 12px 0;
+  }
+
+  .header-inner {
+    background: #161616;
+    padding: 14px 18px;
+    border-radius: 14px;
+  }
+
+  /* LOGO */
+  .logo {
+    font-size: 20px;
+  }
+
+  /* HAMBURGER */
+  .menu-btn {
+    width: 36px;
+    height: 28px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+  }
+
+  .menu-btn span {
+    height: 3px;
+    width: 100%;
+    background: #fff;
+    border-radius: 4px;
+  }
+
+  /* NAV MOBILE */
+  .nav {
+    position: absolute;
+    top: 85px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 92%;
+    background: #161616;
+    border-radius: 14px;
+    padding: 20px;
+    display: none;
+    flex-direction: column;
+    gap: 16px;
+    border: 1px solid #2a2a2a;
+  }
+
+  .nav a {
+    margin: 0;
+    font-size: 16px;
+  }
+
+  .nav .btn {
+    text-align: center;
+  }
+
+  /* TOGGLE MENU */
+  #menu-toggle:checked ~ .nav {
+    display: flex;
+  }
+}
+
