--- a/Service/css/header.css
+++ b/Service/css/header.css
@@ -8,6 +8,9 @@
     border-radius: 16px;
     border: 1px solid #1C1C21;
 }
+.menu-bar-icon {
+    display: none;
+}
 .menu-item {
     list-style: none;
     padding: 18px 24px;
@@ -36,4 +39,46 @@
     justify-content: space-between;
     align-items: center;
     gap: 16px;
+}
+@media screen and (min-width: 768px) and (max-width: 991.98px) {
+    .header {
+        padding: 16px 16px 16px 34px;
+        border-radius: 10px;
+    }
+    .menu-bar-icon {
+        display: none;
+    }
+    .logo img {
+        width: 80px;
+    }
+    .menu-item a {
+        font-size: 8px;
+    }
+    .menu-item {
+        padding: 6px;
+        border-radius: 6px;
+        display: flex;
+        align-items: center;
+    }
+    .menu-list .menu-item:last-child {
+        border-radius: 6px;
+    }
+}
+@media screen and (max-width: 767.98px) {
+    .menu {
+        display: none;
+    }
+    .header {
+        padding: 16px;
+        border-radius: 8px;
+    }
+    .logo img {
+        width: 70px;
+    }
+    .menu-bar-icon {
+        display: block;
+        background-color: #0F0F0F;
+        border-radius: 10px;
+        padding: 6px;
+    }
 }
