--- a/Service/css/services.css
+++ b/Service/css/services.css
@@ -6,4 +6,102 @@
     display: flex;
     gap: 20px;
     flex-direction: column;
+    margin-bottom: 120px;
+}
+.services-content {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+}
+.services-content-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+.services-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.services-left-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 14px;
+}
+.services-left {
+    border-radius: 14px;
+    padding: 90px 60px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    background-color: #1A1A1A;
+    width: calc((100% - 20px) / 2);
+}
+.services-left-icon {
+    border-radius: 12px;
+    border: 1px solid #333333;
+    padding: 16px;
+    background-color: #1F1F1F;
+}
+.services-left-text {
+    font-size: 30px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #F9EFEC;
+}
+.services-left-description {
+    font-size: 18px;
+    font-weight: 400;
+    color: #B3B3B2;
+    line-height: 150%;
+}
+.services-left-price {
+    font-size: 30px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #F9EFEC;
+    text-align: right;
+}
+.services-right-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+.services-right {
+    border-radius: 14px;
+    padding: 40px;
+    gap: 24px;
+    display: flex;
+    flex-direction: column;
+    background-color: #1A1A1A;
+    width: calc((100% - 20px) / 2);
+}
+.services-right-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.services-right-text {
+    font-size: 24px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #F9EFEC;
+}
+.services-right-content-img > img {
+    border-radius: 20px;
+    border: 1px solid #333333;
+    width: 100%;
+    height: 274px;
+}
+.services-right-content-img {
+    width: calc((100% - 20px) / 2);
+    position: relative;
+}
+.vector {
+    position: absolute;
+    top: 190px;
+    left: 30px;
 }
