--- a/Service/css/success.css
+++ b/Service/css/success.css
@@ -25,17 +25,22 @@
     flex-direction: column;
     gap: 20px;
 }
+.success-content .success-content-item:first-child{
+    margin-top: 20px;
+}
 .success-content-item {
     border-radius: 20px;
     border: 2px solid #1F1F1F;
     padding: 50px;
     gap: 20px;
-    margin-top: 20px;
-    background-color: #1F1F1F;
+    background-color: #0F0F0F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .success-content-item-left {
     border-radius: 14px;
-    padding: 60px;
+    padding: 74px 60px;
     display: flex;
     flex-direction: column;
     gap: 50px;
@@ -69,4 +74,47 @@
 }
 .success-content-item-right {
     width: 56%;
+}
+.success-content-item-right {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.success-right-header {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+.success-right-header-btn {
+    border-radius: 12px;
+    padding: 18px 24px;
+    background-color: #1F1F1F;
+    color: #B3B3B2;
+    font-weight: 500;
+    font-size: 18px;
+    text-transform: uppercase;
+}
+.success-right-header-btn:nth-child(2) {
+    background-color: #CE7D63;
+    color: #0F0F0F;
+}
+.success-right-content {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    background-color: #1A1A1A;
+    padding: 40px;
+    border-radius: 14px;
+}
+.success-right-content-title {
+    font-size: 48px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #F9EFEC;
+}
+.success-right-content-description {
+    line-height: 150%;
+    font-size: 18px;
+    color: #B3B3B2;
+    font-weight: 400;
 }
